--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday, my love!!! :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,19 +17,19 @@
 
 <body>
 
-    <audio class="song" loop autoplay>
+    <!-- <audio class="song" loop autoplay>
         <source src="./music/hbd.mpeg">
         </source>
         Your browser isn't invited for super fun audio time.
-    </audio>
+    </audio> -->
 
     <div class="container">
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Almy</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <!-- <p class="two" id="greetingText">I really like your name btw!</p> -->
         </div>
 
         <div class="three">
@@ -39,13 +39,13 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday my love!! I thought a lot about stuff I could do for your birthday, but to be honest, the options are pretty limited because I'm obviously not there. These circumstances forced me to improvise. I just wanted to say, for one, congrats on no longer being a teenager! Personally it's a relief to beat some of these Drizzy allegations, and I can rest easy knowing the opps won't be on my case anymore. You're so very dear to me and I hope you have an amazing birthday!! - Love, Noah 
                 </p>
-                <p class="fake-btn">Send</p>
+                <!-- <p class="fake-btn">Send</p> -->
             </div>
         </div>
 
-        <div class="five">
+        <!-- <div class="five">
             <p class="idea-1">That's what I was going to do.</p>
             <p class="idea-2">But then I stopped.</p>
             <p class="idea-3">
@@ -62,10 +62,10 @@
                 <span>S</span>
                 <span>O</span>
             </p>
-        </div>
+        </div> -->
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/pizza.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
