various minor edits

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
 
-    <!-- <audio class="song" loop autoplay>
+    <audio class="song" loop autoplay>
         <source src="./music/hbd.mpeg">
         </source>
         Your browser isn't invited for super fun audio time.
-    </audio> -->
+    </audio>
 
     <div class="container">
         <div class="one">
@@ -64,16 +64,16 @@
             </p>
         </div> -->
 
-        <div class="six">
+        <div class="five">
             <img src="./img/pizza.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">P.S. There's actually audio... </h5>
             </div>
         </div>
 
-        <div class="seven">
+        <div class="six">
             <div class="baloons">
                 <img src="img/ballon2.svg" alt="" />
                 <img src="img/ballon1.svg" alt="" />
