--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
             </p>
         </div> -->
 
-        <div class="five">
+        <div class="six">
             <img src="./img/pizza.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">P.S. There's actually audio... </h5>
+                <h5 id="wishText">P.S. There's totally audio for you to listen to.... );</h5>
             </div>
         </div>
 
-        <div class="six">
+        <div class="seven">
             <div class="baloons">
                 <img src="img/ballon2.svg" alt="" />
                 <img src="img/ballon1.svg" alt="" />
