--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/Recording.m4a">
+        <source src="./music/hbd.mpeg" type="audio/mpeg">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
