--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">P.S. There's totally audio for you to listen to.... );</h5>
+                <!-- <h5 id="wishText">P.S. There's totally audio for you to listen to.... );</h5> -->
             </div>
         </div>
 
@@ -142,8 +142,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>I DID send you a gift but the shipping options were rather limited and it might be a few days late, sorry!!</p>
+            <p id="replay">On the bright side, click here if you want to watch it again. (P.S. you should turn your audio on if you didn't already!!) Have the best birthday ever, Almy!!</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
