--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="nine">
             <p>I DID send you a gift but the shipping options were rather limited and it might be a few days late, sorry!!</p>
-            <p id="replay">On the bright side, click here if you want to watch it again. (P.S. you should turn your audio on if you didn't already!!) Have the best birthday ever, Almy!!</p>
+            <p id="replay">On the bright side, click here if you want to watch it again. (P.S. you should turn your audio on if you didn't already!!, might have to refresh the page for that) Have the best birthday ever, Almy!!</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
