--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </div> -->
 
         <div class="six">
-            <img src="./img/pizza.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="./img/pizza2.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <!-- <img src="img/hat.svg" alt="hat" class="hat" /> -->
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
                 <!-- <h5 id="wishText">P.S. There's totally audio for you to listen to.... );</h5> -->
