--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Almy</span>
+                Herro,
+                <span id="name">ALMY!!</span>
             </h1>
             <!-- <p class="two" id="greetingText">I really like your name btw!</p> -->
         </div>
