--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday my love!! I thought a lot about stuff I could do for your birthday, but to be honest, the options are pretty limited because I'm obviously not there. These circumstances forced me to improvise. I just wanted to say, for one, congrats on no longer being a teenager! Personally it's a relief to beat some of these Drizzy allegations, and I can rest easy knowing the opps won't be on my case anymore. You're so very dear to me and I hope you have an amazing birthday!! - Love, Noah 
+                Happy birthday my love!! I thought a lot about stuff I could do for your birthday, but to be honest, the options are pretty limited because I'm obviously not there. These circumstances forced me to improvise. I just wanted to say, for one, congrats on no longer being a teenager! Personally it's a relief to beat some of these "Drizzy" allegations, and I can rest easy knowing the opps won't be on my case anymore. You're so very dear to me and I hope you have an amazing birthday!! - Love, Noah 
                 </p>
                 <!-- <p class="fake-btn">Send</p> -->
             </div>
